Manifests_k8s/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
  namespace: achat-app
  labels:
    app: mysqldb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql:latest
        resources:
          limits:
            memory: "700Mi"
            cpu: "0.4"
          requests:
            memory: "500Mi"
            cpu: "0.2"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
