Manifests_k8s/springapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
  namespace: achat-app
  labels:
    app: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: dockerdockerdhia/achat_back_prod
        resources:
          limits:
            memory: "700Mi"
            cpu: "0.4"
          requests:
            memory: "600Mi"
            cpu: "0.2"
        ports:
        - containerPort: 8089
