Manifests_k8s/angularapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: achat-app
spec:
  selector:
    app: angular-app 
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
