Manifests_k8s/springapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: achat-app
spec:
  type: NodePort
  selector:
    app: spring-app  
  ports:
    - protocol: TCP
      nodePort: 30007
      port: 8089
      targetPort: 8089
