Manifests_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: achat-app
spec:
  ingressClassName: nginx
  rules:
  - host: app.sesame-pds.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angular-service
            port:
              number: 80
